--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "valk",
-  "displayName": "Valk language support",
-  "publisher": "ctxcode",
-  "version": "0.0.1",
+  "displayName": "Valk language",
+  "publisher": "valk-lang",
+  "version": "0.0.2",
+  "icon": "images/valk-logo.png",
+  "repository": {
+    "url": "https://github.com/valk-lang/valk-vscode"
+  },
   "engines": {
     "vscode": "^1.80.0"
   },
@@ -54,10 +58,8 @@
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
-    "@types/vscode": "^1.102.0",
+    "@types/vscode": "^1.80.0",
     "typescript": "^5.9.2",
     "vscode-languageclient": "^9.0.1"
-  },
-  "dependencies": {
   }
 }
